--- a/Makefile.am
+++ b/Makefile.am
@@ -62,10 +62,9 @@ else
 
 EXTRA_DIST += extra/gc.c
 libgc_la_SOURCES = \
-    allchblk.c alloc.c blacklst.c dbg_mlc.c \
-    dyn_load.c finalize.c gc_dlopen.c headers.c \
-    mach_dep.c malloc.c mallocx.c mark.c mark_rts.c misc.c new_hblk.c \
-    obj_map.c os_dep.c ptr_chck.c reclaim.c specific.c typd_mlc.c
+    allchblk.c alloc.c blacklst.c dbg_mlc.c dyn_load.c finalize.c gc_dlopen.c \
+    headers.c mach_dep.c malloc.c mallocx.c mark.c mark_rts.c misc.c \
+    new_hblk.c obj_map.c os_dep.c ptr_chck.c reclaim.c specific.c typd_mlc.c
 
 # C Library: Architecture Dependent
 # ---------------------------------
