--- a/Makefile.direct
+++ b/Makefile.direct
@@ -105,28 +105,29 @@ RANLIB= ranlib
 # For EMX, replace "ranlib" with "ar s".
 
 # All .o files of libgc.a except for dyn_load.o.
-OBJS= alloc.o reclaim.o allchblk.o misc.o mach_dep.o os_dep.o mark_rts.o \
-  headers.o mark.o obj_map.o blacklst.o finalize.o new_hblk.o dbg_mlc.o  \
-  malloc.o checksums.o pthread_support.o pthread_stop_world.o \
-  darwin_stop_world.o typd_mlc.o ptr_chck.o mallocx.o gcj_mlc.o specific.o \
-  gc_dlopen.o backgraph.o win32_threads.o pthread_start.o \
-  thread_local_alloc.o fnlz_mlc.o
+OBJS= allchblk.o alloc.o backgraph.o blacklst.o checksums.o \
+  darwin_stop_world.o dbg_mlc.o finalize.o fnlz_mlc.o gc_dlopen.o \
+  gcj_mlc.o headers.o mach_dep.o malloc.o mallocx.o mark.o mark_rts.o misc.o \
+  new_hblk.o obj_map.o os_dep.o pthread_start.o pthread_stop_world.o \
+  pthread_support.o ptr_chck.o reclaim.o specific.o thread_local_alloc.o \
+  typd_mlc.o win32_threads.o
 
 NODIST_OBJS= atomic_ops.o atomic_ops_sysdeps.o
 
-CSRCS= reclaim.c allchblk.c misc.c alloc.c mach_dep.c os_dep.c mark_rts.c \
-  headers.c mark.c obj_map.c blacklst.c finalize.c \
-  new_hblk.c dyn_load.c dbg_mlc.c malloc.c \
-  checksums.c pthread_support.c pthread_stop_world.c darwin_stop_world.c \
-  typd_mlc.c ptr_chck.c mallocx.c gcj_mlc.c specific.c gc_dlopen.c \
-  backgraph.c win32_threads.c pthread_start.c thread_local_alloc.c fnlz_mlc.c
+# Almost matches OBJS but also includes dyn_load.c.
+CSRCS= allchblk.c alloc.c backgraph.c blacklst.c checksums.c \
+  darwin_stop_world.c dbg_mlc.c dyn_load.c finalize.c fnlz_mlc.c gc_dlopen.c \
+  gcj_mlc.c headers.c mach_dep.c malloc.c mallocx.c mark.c mark_rts.c misc.c \
+  new_hblk.c obj_map.c os_dep.c pthread_start.c pthread_stop_world.c \
+  pthread_support.c ptr_chck.c reclaim.c specific.c thread_local_alloc.c \
+  typd_mlc.c win32_threads.c
 
-CORD_SRCS= cord/cordbscs.c cord/cordxtra.c cord/cordprnt.c cord/tests/de.c \
+CORD_SRCS= cord/cordbscs.c cord/cordprnt.c cord/cordxtra.c cord/tests/de.c \
   cord/tests/cordtest.c include/gc/cord.h include/gc/ec.h \
   include/gc/cord_pos.h cord/tests/de_win.c cord/tests/de_win.h \
   cord/tests/de_cmds.h cord/tests/de_win.rc
 
-CORD_OBJS= cord/cordbscs.o cord/cordxtra.o cord/cordprnt.o
+CORD_OBJS= cord/cordbscs.o cord/cordprnt.o cord/cordxtra.o
 
 SRCS= $(CSRCS) \
   include/gc/gc_typed.h include/gc/gc_tiny_fl.h include/gc/gc_version.h \
