Provide one flag in each add_compile_options/definitions of CMake script (refactoring)
* CMakeLists.txt (add_definitions): Specify only one macro per
add_definitions.
* CMakeLists.txt (add_compile_options): Specify only one option.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,8 @@ if (BUILD_SHARED_LIBS)
   message(STATUS "GCCPP_VERSION_PROP = ${GCCPP_VERSION_PROP}")
 endif(BUILD_SHARED_LIBS)
 
-add_definitions("-DALL_INTERIOR_POINTERS -DNO_EXECUTE_PERMISSION")
+add_definitions("-DALL_INTERIOR_POINTERS")
+add_definitions("-DNO_EXECUTE_PERMISSION")
 
 # Set struct packing alignment to word (instead of 1-byte).
 if (BORLAND)
@@ -159,8 +160,9 @@ elseif (WATCOM)
     add_compile_options(/wcd=201)
   endif()
 else()
+  add_compile_options(-Wall)
+  add_compile_options(-Wextra)
   # TODO: add -[W]pedantic -Wno-long-long
-  add_compile_options(-Wall -Wextra)
 endif()
 
 if (WIN32)
@@ -243,7 +245,8 @@ if (enable_threads)
       message(FATAL_ERROR "HP/UX 10 POSIX threads are not supported.")
     endif()
     # Common defines for POSIX platforms.
-    add_definitions("-DGC_THREADS -D_REENTRANT")
+    add_definitions("-DGC_THREADS")
+    add_definitions("-D_REENTRANT")
     if (enable_parallel_mark)
       add_definitions("-DPARALLEL_MARK")
     endif()
@@ -338,7 +341,8 @@ if (enable_atomic_uncollectable)
 endif()
 
 if (enable_gc_debug)
-  add_definitions("-DDBG_HDRS_ALL -DKEEP_BACK_PTRS")
+  add_definitions("-DDBG_HDRS_ALL")
+  add_definitions("-DKEEP_BACK_PTRS")
   if (HOST MATCHES i.86-.*-dgux.*|.*-.*-.*linux.*)
     add_definitions("-DMAKE_BACK_GRAPH")
     if (HOST MATCHES .*-.*-.*linux.* AND NOT (HOST MATCHES e2k-.*-linux.*))
@@ -370,10 +374,11 @@ if (enable_redirect_malloc)
   endif()
 endif(enable_redirect_malloc)
 
-if (enable_munmap)
-  add_definitions("-DUSE_MMAP -DUSE_MUNMAP")
-elseif (enable_mmap)
+if (enable_mmap OR enable_munmap)
   add_definitions("-DUSE_MMAP")
+  if (enable_munmap)
+    add_definitions("-DUSE_MUNMAP")
+  endif(enable_munmap)
 endif()
 
 if (NOT enable_dynamic_loading)
