GH Actions: Reduce amount of jobs in zig build

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     name: ${{ matrix.os }} thr:${{ matrix.enable_threads }} rwlock:${{ matrix.enable_rwlock }} redir:${{ matrix.redirect_malloc }} gcdeb:${{ matrix.enable_gc_debug }} munmap:${{ matrix.enable_munmap }} paramark:${{ matrix.parallel_mark }} thrlocal:${{ matrix.thread_local_alloc }} dll:${{ matrix.shared_libs }}
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 10
+    timeout-minutes: 6
 
     strategy:
       fail-fast: false
@@ -38,12 +38,42 @@ jobs:
           thread_local_alloc: true
         - enable_gc_debug: true # FIXME: some tests fail if gc_debug+redirect
           redirect_malloc: true
+        # The following ones are long-running jobs, thus excluded.
+        - os: macos-latest
+          enable_gc_debug: true
+          enable_rwlock: true
         # The following ones just to reduce amount of jobs.
         - enable_munmap: false
           shared_libs: true
         - enable_munmap: true
           enable_threads: false
           shared_libs: false
+        - enable_gc_debug: true
+          enable_rwlock: true
+          thread_local_alloc: false
+        - os: macos-latest
+          enable_munmap: false
+          enable_threads: false
+        - os: macos-latest
+          enable_munmap: false
+          enable_rwlock: true
+        - os: macos-latest
+          enable_rwlock: true
+          thread_local_alloc: false
+        - os: macos-latest
+          enable_rwlock: true
+          parallel_mark: false
+        - os: macos-latest
+          enable_munmap: false
+          redirect_malloc: false
+        - os: macos-latest
+          enable_threads: true
+          redirect_malloc: false
+          thread_local_alloc: false
+        - os: macos-latest
+          enable_threads: true
+          parallel_mark: false
+          redirect_malloc: false
 
     steps:
     - uses: actions/checkout@v4
