GH Actions: add zig build jobs with gc_debug and redirect_malloc

--- a/.github/workflows/zig-build.yml
+++ b/.github/workflows/zig-build.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     name: ${{ matrix.os }} thr:${{ matrix.enable_threads }} rwlock:${{ matrix.enable_rwlock }} redir:${{ matrix.redirect_malloc }} gcdeb:${{ matrix.enable_gc_debug }} munmap:${{ matrix.enable_munmap }} paramark:${{ matrix.parallel_mark }} thrlocal:${{ matrix.thread_local_alloc }} dll:${{ matrix.shared_libs }}
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 6
+    timeout-minutes: 7
 
     strategy:
       fail-fast: false
@@ -36,8 +36,11 @@ jobs:
           enable_rwlock: true
         - enable_threads: false
           thread_local_alloc: true
-        - enable_gc_debug: true # FIXME: some tests fail if gc_debug+redirect
+        - os: ubuntu-latest # TODO: illegal instruction in GC_clear_stack
+          enable_gc_debug: true
+          enable_threads: false
           redirect_malloc: true
+          shared_libs: false
         # The following ones are long-running jobs, thus excluded.
         - os: macos-latest
           enable_gc_debug: true
@@ -50,6 +53,10 @@ jobs:
           shared_libs: false
         - enable_gc_debug: true
           enable_rwlock: true
+          thread_local_alloc: false
+        - parallel_mark: false
+          redirect_malloc: true
+        - enable_gc_debug: true
           thread_local_alloc: false
         - os: macos-latest
           enable_munmap: false
